--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.24"
     },
     "config": {
         "optimize-autoloader": true,
