added more controllers

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,27 @@
+# config/routes.yaml
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+app_lucky_number:
+    path: /lucky/number
+    controller: App\Controller\LuckyController::number
+app_first_ajax:
+    path: /JScript
+    controller: App\Controller\JScriptController::number
+blog_list:
+    path: /blog
+    controller: App\Controller\BlogController::list
+api_post_show:
+    path:       /api/posts/{id}
+    controller: App\Controller\BlogApiController::show
+    methods:    GET|HEAD
+api_post_edit:
+    path:       /api/posts/{id}
+    controller: App\Controller\BlogApiController::edit
+    methods:    PUT
+contact:
+    path:       /contact
+    controller: 'App\Controller\DefaultController::contact'
+    condition:  "context.getMethod() in ['GET', 'HEAD'] and request.headers.get('User-Agent') matches '/firefox/i'"
+    # expressions can also include config parameters:
+    # condition: "request.headers.get('User-Agent') matches '%app.allowed_browsers%'"
