--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,8 +9,10 @@ app_first_ajax:
     path: /JScript
     controller: App\Controller\JScriptController::number
 blog_list:
-    path: /blog
+    path: /blog/{page<\d+>}
     controller: App\Controller\BlogController::list
+    requirements:
+        page: '\d+'
 api_post_show:
     path:       /api/posts/{id}
     controller: App\Controller\BlogApiController::show
@@ -25,3 +27,6 @@ contact:
     condition:  "context.getMethod() in ['GET', 'HEAD'] and request.headers.get('User-Agent') matches '/firefox/i'"
     # expressions can also include config parameters:
     # condition: "request.headers.get('User-Agent') matches '%app.allowed_browsers%'"
+blog_show:
+    path:       /blog/{slug}
+    controller: App\Controller\BlogController::show
